# parsing_vacancies

./: README.md  config.py  main.py  pyproject.toml  vacancies.json
app/: parsing_vacancies.py  utils.py
bot/: bot.py
data/: test_file.json
database/: config.py  database.py  engine.py  orm.py
database/queries/: core.py  orm.py
src/: AbstractGetApiHh.py  AbstractHh.py  AbstractJsonSaver.py  ApiHH.py  CompareVacancies.py  GetApiHh.py  GetVacancies.py  JsonSaver.py  UserInteraction.py  Vacancies.py  Vacancy.py  database.py  json_saver.py  parsing_hh.py  parsing_vacancies.py  utils.py  vacancy.py
tests/: conftest.py  test_api_hh.py  test_compare_vacancies.py  test_get_api_hh.py  test_json_saver.py  test_vacancy.py
